redactable/tests/ui/tracing_redacted_value_not_clone.stderr
error[E0599]: no method named `clone` found for struct `TracingRedactedValue<T>` in the current scope
  --> tests/ui/tracing_redacted_value_not_clone.rs:18:27
   |
18 |     let _second = wrapper.clone();
   |                           ^^^^^ method not found in `TracingRedactedValue<Event>`
